// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures 1`] = `"Interchange additions InterchangeName redeclares property DomainEntityIdentityTemplateName1 of base Interchange."`;

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures 2`] = `
Object {
  "column": 27,
  "line": 11,
  "tokenText": "DomainEntityIdentityTemplateName1",
}
`;

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures 3`] = `"Interchange additions InterchangeName redeclares property DomainEntityIdentityTemplateName2 of base Interchange."`;

exports[`when interchange extension identity templates duplicates multiple names in base interchange should have validation failures 4`] = `
Object {
  "column": 27,
  "line": 12,
  "tokenText": "DomainEntityIdentityTemplateName2",
}
`;

exports[`when validating interchange extension identity template duplicates names in base interchange should have validation failures 1`] = `"Interchange additions InterchangeName redeclares property DomainEntityIdentityTemplateName of base Interchange."`;

exports[`when validating interchange extension identity template duplicates names in base interchange should have validation failures 2`] = `
Object {
  "column": 27,
  "line": 10,
  "tokenText": "DomainEntityIdentityTemplateName",
}
`;
